Ajout des dernière modification avant les annimations et le responsiv design

--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
     <!-- Début de l'entête  -->
 
     <header>
-        <div class="header-container container">
+        <div class="header-container container x1">
             <div class="top">
                 <a class="logo-home" href=""><img src="../Assets/Logos/logohome.png" alt=""></a>
                 <a class="home" href="index.html">HOME</a>
@@ -21,7 +21,7 @@
                 <p class="text fade-in">Au nom de ses parents assassinés, Bruce Wayne mène une guerre éternelle contre
                     les criminels de Gotham City. Il est vengeur. Il est la nuit. </p>
                 <p class="text fade-in">Il est Batman.</p>
-                <div class="btn fade-in">
+                <div class="btn">
                     <a href=""><button>VOIR LE HEROS</button></a>
                     <a href=""><button>LES ADVERSAIRES</button></a>
                 </div>
@@ -44,7 +44,7 @@
             </div>
             <!-- BATMAN AU CINEMA -->
             <section id="bat-au-cinema">
-                <h1>BATMAN AU CINÉMA</h1>
+                <h1 class="fade-in">BATMAN AU CINÉMA</h1>
                 <p class="text fade-in">
                     Le personnage de Batman est un super héros de l’univers de DC Comics. Il a été créé par le
                     dessinateur Bob Kane et le scénariste Bill Finger et apparaît pour la première fois dans le comic
@@ -54,13 +54,13 @@
                     d’interpréter l’homme chauve-souris.
                     Voici les trois derniers :
                 </p>
-                <div class="personnages">
-                    <div class="pers-info">
+                <div class="personnages fade-in">
+                    <div class="pers-info ">
                         <img src="../Assets/Illustrations/Bathome2.png" alt="">
                         <p class="sous-titre">Robert Pattinson </p>
                         <p class="sous-titre">(2022) </p>
                     </div>
-                    <div class="pers-info">
+                    <div class="pers-info ">
                         <img src="../Assets/Illustrations/Bathome3.png" alt="">
                         <p class="sous-titre">Christian Bale </p>
                         <p class="sous-titre">(2006 - 2008 - 2012) </p>
@@ -73,17 +73,17 @@
                 </div>
             </section>
             <!-- NEMESIS -->
-            <section id="nemesis">
+            <section id="nemesis ">
                 <img class="bt-13" src="../Assets/Illustrations/Bathome13.png" alt="">
-                <h1>NÉMÉSIS</h1>
-                <p class="text fade-in">
+                <h1 class="fade-in">NÉMÉSIS</h1>
+                <p class="text fade-in fade-in">
                     Batman souhaite éradiquer la criminalité de Gotham. C’est pourquoi, il affrontera la plupart du
                     temps, des vilains sans capacités surnaturelles mais particulièrement violents ou psychopathes. Avec
                     son introduction dans la Justice League il aura l’occasion
                     de se mesurer à des antagonistes qui défient l’imagination et les lois de la physique. Parmi les
                     derniers ennemis emblématiques que nous avons pu voir au cinéma, on retrouve :
                 </p>
-                <div class="personnages">
+                <div class="personnages fade-in">
                     <div class="pers-info">
                         <img src="../Assets/Illustrations/Bathome5.png" alt="">
                         <p class="sous-titre">The Riddler - Paul Dano </p>
@@ -104,7 +104,7 @@
             <section id="allies">
                 <img class="bt-12" src="../Assets/Illustrations/Bathome12.png" alt="">
 
-                <h1>ALLIES </h1>
+                <h1 class="fade-in">ALLIES </h1>
                 <p class="text fade-in">
                     Alfred est le majordome des Wayne. A leur mort il s’occupe de l’éducation du jeune Bruce avant de
                     l’assister dans son rôle du Batman. Ce dernier rencontrera Catwoman dès le premier numéro des
@@ -114,7 +114,7 @@
                     nettoyer sa ville de la criminalité
                     qui y règne.
                 </p>
-                <div class="personnages">
+                <div class="personnages fade-in">
                     <div class="pers-info">
                         <img src="../Assets/Illustrations/Bathome9.png" alt="">
                         <p class="sous-titre">Alfred Pennyworth - Michael Cain </p>
@@ -133,8 +133,8 @@
                 </div>
             </section>
             <section id="justice-league fade-in">
-                <h1>JUSTICE LEAGUE </h1>
-                <p class="text">
+                <h1 class="fade-in">JUSTICE LEAGUE </h1>
+                <p class="text fade-in">
                     Lorsque la Terre est menacée les plus grands super-héros s’allient pour la protéger. Ils doivent
                     cependant apprendre à se faire confiance mutuellement et à faire équipe ce qui ne sera pas chose
                     aisée. Ensemble ils forment la Justice League, les plus grands
@@ -143,15 +143,15 @@
                 </p>
             </section>
         </div>
-        <img src="../Assets/Illustrations/Bathome11.png" alt="">
+        <img class="fade-in" src="../Assets/Illustrations/Bathome11.png" alt="">
 
         <div class="container">
             <section id="multimedia">
                 <div class="top">
                     <div><img class="fleche-left" src="../Assets/Logos/icon_flèche_1.png" alt=""></div>
                     <div class="multi-info">
-                        <div class="image"><img src="../Assets/Illustrations/Bathome_ba1.png" alt=""></div>
-                        <div class="multi-info-text">
+                        <div class="image fade-in"><img src="../Assets/Illustrations/Bathome_ba1.png" alt=""></div>
+                        <div class="multi-info-text fade-in">
                             <p class="text">ACTION, Adventure </p>
                             <p class="text">Batman Begins</p>
                             <p class="text">IMDB : <span>8.2</span> </p>
@@ -167,7 +167,7 @@
 
                 </div>
                 <div class="bottom">
-                    <div class="img-container">
+                    <div class="img-container fade-in">
                         <img src="../Assets/Illustrations/Bathome_ba2.png" alt="" class="img1">
                         <img src="../Assets/Logos/icon_player.png" alt="" class="img2">
                     </div>
@@ -176,7 +176,7 @@
             </section>
         </div>
         <section id="prenons-con">
-            <h1>
+            <h1 class="fade-in">
                 PRENONS CONTACT
             </h1>
             <form action="#" method="">
@@ -224,8 +224,8 @@
         <div class="container">
             <div class="footer-top">
                 <img src="../Assets/Logos/icon_guillemets_1.png" alt="">
-                <div class="p-container">
-                    <p class="text"> La seule façon raisonnable de vivre en ce bas monde, <br> c'est en dehors des
+                <div class="p-container fade-in">
+                    <p class="text "> La seule façon raisonnable de vivre en ce bas monde, <br> c'est en dehors des
                         règles.
                     </p>
                     <p class="text">
