--- a/html/index.html
+++ b/html/index.html
@@ -12,26 +12,28 @@
 <body>
     <!-- Début de l'entête  -->
 
-    <header>
+    <header id="header">
         <div class="header-container container ">
             <div class="top">
                 <a class="logo-home" href=""><img src="../Assets/Logos/logohome.png" alt=""></a>
                 <a class="home" href="index.html">HOME</a>
             </div>
             <div class="bottom">
-                <p class="text fade-in">Au nom de ses parents assassinés, Bruce Wayne mène une guerre éternelle contre
-                    les criminels de Gotham City. Il est vengeur. Il est la nuit. </p>
-                <p class="text fade-in">Il est Batman.</p>
-                <div class="btn">
-                    <a href="#bat-au-cinema"><button>VOIR LE HEROS</button></a>
-                    <a href="#nemesis"><button>LES ADVERSAIRES</button></a>
+                <div class="intro-h fade-in ">
+                    <p class="text">Au nom de ses parents assassinés, Bruce Wayne mène une guerre éternelle contre les
+                        criminels de Gotham City. Il est vengeur. Il est la nuit. </p>
+                    <p class="text">Il est Batman.</p>
+                    <div class="btn">
+                        <a href="#bat-au-cinema"><button>VOIR LE HEROS</button></a>
+                        <a href="#nemesis"><button>LES ADVERSAIRES</button></a>
+                    </div>
                 </div>
                 <div class="img-right">
-                    <a href=""><img src="../Assets/Logos/logo_bat_flèche.png" alt=""></a>
+                    <a href="#header"><img src="../Assets/Logos/logo_bat_flèche.png" alt=""></a>
                     <a href=""><img src="../Assets/Logos/icon_facebook.png" alt=""></a>
                     <a href=""><img src="../Assets/Logos/icon_ig.png" alt=""></a>
                     <a href=""><img src="../Assets/Logos/icon_tw.png" alt=""></a>
-                    <a href=""><img src="../Assets/Logos/logo_bat_flèche_2.png" alt=""></a>
+                    <a href="#prenons-con"><img src="../Assets/Logos/logo_bat_flèche_2.png" alt=""></a>
                 </div>
             </div>
         </div>
