Modification avant la fin du responsive design

--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
+
     <title>Accueil</title>
 
 </head>
@@ -221,6 +222,14 @@
                         required>
                 </div>
                 <input class="submit" type="submit" value="CONFIRMER">
+                <div class="pop-up">
+                    <div class="pop-up-text">
+                        <p class="text">
+                            MESSAGE RECU !
+                        </p>
+                    </div>
+
+                </div>
             </form>
 
         </section>
@@ -268,8 +277,6 @@
         </div>
 
     </footer>
-
-
 </body>
 
 </html>
