--- a/html/index.html
+++ b/html/index.html
@@ -221,8 +221,11 @@
                     <input type="text" name="msg" id="msg" placeholder="Laisser un commentaire pour la communauté"
                         required>
                 </div>
-                <input class="submit" type="submit" value="CONFIRMER">
-                <div class="pop-up">
+
+                <a href="#pop-up" class="pop-up-btn">
+                    <button type="button">CONFIRMER</button>
+                </a>
+                <div id="pop-up" class="pop-up">
                     <div class="pop-up-text">
                         <p class="text">
                             MESSAGE RECU !
