Rendu de la version final du projet

--- a/html/index.html
+++ b/html/index.html
@@ -149,7 +149,7 @@
         </div>
         <img class="fade-in" src="../Assets/Illustrations/Bathome11.png" alt="">
 
-        <div class="container">
+        <div class="container mlti">
             <section id="multimedia">
                 <div class="top">
                     <div><img class="fleche-left" src="../Assets/Logos/icon_flèche_1.png" alt=""></div>
